Changes in 1.0.38:
  o Client Changes:
    * "conary help [command]" now displays the usage message for
      the command.
    * The --help options will now display a smaller number of flags by
      default, and more when the --verbose flag is added.
    * A getUpdateItemList() method has been added to the ConaryClient
      class.  It returns a list of top level troves on the local
      system. (CNY-1025)
    * "conary rq package:source --tags" will now show an "autosource"
      tag on autosourced files.
    * Conary now correctly uses "KB/s" instead of "Kb/s" when
      displaying transfer rates. (CNY-330)
    * conary rblist is now more readable, and supports --labels and
      --full-versions. (CNY-410)

  o Build Changes:
    * When using "cvc refresh" to refresh autosourced files, the
      refresh flag is now reset after the commit.  Previously, the
      file would continue to be refreshed on subsequent commits.
    * When using "cvc commit", cvc no longer downloads autosourced
      files which haven't changed (CNY-611, CNY-463)
    * Files that were previously marked as autosource files can now be
      made a regular file by calling "cvc add".
    * When using "cvc remove" to remove a file from the local checkout
      directory and the file is still specified in the recipe file as
      being automatically downloaded, the file will now be switched to
      an autosource file (preserving the pathId).
    * The autosource state is now stored explicitly in CONARY files.
    * CONARY files now use textual identifiers for flags instead of
      digits.
    * "cvc refresh" no longer downloads all autosource files.  Only
      the file(s) specified are downloaded.
    * Files removed with "cvc remove" are no longer erroneously
      re-added when committing changes to the repository.  This used
      to happen when the file was in the previous version of the
      source component and also present in the lookaside
      cache. (CNY-601)