@@ -1,3 +1,10 @@
+Changes in @NEW@:
+  o Build Changes:
+    * The commitRelativeChangeset configuration item has been added
+      to control whether Conary creates relative or absolute changesets
+      when cooking.  It defaults to True, but can be changed to False
+      to cause Conary to cook and commit absolute changesets. (CNY-912)
+
 Changes in 1.0.38:
   o Client Changes:
     * "conary help [command]" now displays the usage message for
